--- a/website.css
+++ b/website.css
@@ -1,11 +1,11 @@
-
+font
 
 *{
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
     font-family: invisible;
-    color: #b51f1f;
+    color: rgb(255, 255, 255);
     background-color: #1f1f1f;
     text-transform: capitalize;
 
@@ -23,8 +23,8 @@ h1{
 
 nav a {
     margin-top:50px;
-    background-color:#544a48;
-    color: #cfc3c2;
+    background-color:rgb(48, 48, 48);
+    color: rgb(255, 255, 255);
     font-size: 100px;
     letter-spacing: 7px;
     text-decoration: none;
@@ -38,18 +38,18 @@ nav a {
 nav a:hover {
     background-color:grey;
     color: #b51f1f;
-    border-radius:30px;
+  
     font-family: invisible;
-    letter-spacing: 2px;
-    font-size: 50px;
-    margin-bottom: 50px;
+    
+    
+    
 }
 nav {
-    background-color: #544a48 ;
+    background-color: #1f1f1f ;
     text-align: center;
     margin-bottom: 20px;
     padding:10px 10px; 
-    box-shadow: 0px 0px 20px #b51f1f;  
+   
 } 
 .contact {
     padding-left: 20px;
