--- a/website.css
+++ b/website.css
@@ -1,4 +1,7 @@
-font
+@font-face {
+    font-family: burzum;
+    src: url('GregorianFLF.ttf');
+}
 
 *{
     box-sizing: border-box;
@@ -31,7 +34,7 @@ nav a {
     margin: 0px 5%; 
     padding:5px 10px;
     text-transform: capitalize;
-    font-family: metal;
+    font-family: burzum;
     
 }
 
@@ -39,7 +42,7 @@ nav a:hover {
     background-color:grey;
     color: #b51f1f;
   
-    font-family: invisible;
+    font-family: burzum;
     
     
     
