--- a/website.css
+++ b/website.css
@@ -26,9 +26,9 @@ h1{
 
 nav a {
     margin-top:50px;
-    background-color:rgb(48, 48, 48);
+    background-color: rgb(97, 96, 96) ;
     color: rgb(255, 255, 255);
-    font-size: 100px;
+    font-size: 50px;
     letter-spacing: 7px;
     text-decoration: none;
     margin: 0px 5%; 
@@ -41,14 +41,14 @@ nav a {
 nav a:hover {
     background-color:grey;
     color: #b51f1f;
-  
+    font-size: 30px;
     font-family: burzum;
-    
-    
-    
+    border-radius: 100%;
+    padding: 20px;
+    letter-spacing: 3px;
 }
 nav {
-    background-color: #1f1f1f ;
+    background-color: rgb(97, 96, 96) ;
     text-align: center;
     margin-bottom: 20px;
     padding:10px 10px; 
