--- a/website.css
+++ b/website.css
@@ -2,6 +2,10 @@
     font-family: burzum;
     src: url('GregorianFLF.ttf');
 }
+@font-face {
+    font-family: normal;
+    src: url('LEMONMILK-Regular.otf');
+}
 
 *{
     box-sizing: border-box;
@@ -24,6 +28,7 @@ h1{
 }
 
 
+
 nav a {
     margin-top:50px;
     background-color: rgb(97, 96, 96) ;
@@ -42,7 +47,7 @@ nav a:hover {
     background-color:grey;
     color: #b51f1f;
     font-size: 30px;
-    font-family: burzum;
+    font-family: normal;
     border-radius: 100%;
     padding: 20px;
     letter-spacing: 3px;
@@ -51,7 +56,7 @@ nav {
     background-color: rgb(97, 96, 96) ;
     text-align: center;
     margin-bottom: 20px;
-    padding:10px 10px; 
+    padding:20px 10px; 
    
 } 
 .contact {
@@ -76,6 +81,7 @@ nav {
     margin-left: 600px;
     font-size: 100%;
     margin-top: 50px;
+
 }
 .moosic {
     margin-left: 50px;
@@ -84,4 +90,7 @@ nav {
 .moosic2 {
     margin-left: 1190px;
   
+}
+p{
+    font-family: normal;
 }
